--- a/legacy/index.html
+++ b/legacy/index.html
@@ -40,7 +40,7 @@ cb=googleTranslateElementInit">
 <body>
 <img class="anonimg" src="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/Anonymous_emblem.svg.png?v=1677942826310" alt="Anonymous">
 <h1 class="title">RandomWeb Proxy</h1>
-<h2 class="subtitle">Using Corrosion</h2>
+<h2 class="subtitle">Usin Corrosion</h2>
 <center>
 <div class="searchbar">
 <input id="input" placeholder="Search or Enter URL" autofocus>
