--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
   <script>
     // Function to redirect to the "legacy" folder
     function redirectToLegacy() {
-      window.location.href = "/legacy/index.html";
+      window.location.href = "/public/legacy/index.html";
     }
   </script>
 </body>
