--- a/public/legacy/index.html
+++ b/public/legacy/index.html
@@ -13,12 +13,10 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/proxyfavicon.png?v=1667402474343">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A free web proxy that allows you to access worldwide content without restrictions!">
-    <meta name="keywords" content="random web proxy, randomweb, random web, randomweb proxy, proxy, web proxy, webproxy, randomwebproxy, proxies, web proxies, free web proxy, free proxy, free web proxies, free proxies, unblock, unblock website, unblock websites, unblock site, unblock sites">
     <title>RandomWeb Proxy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <div id="google_translate_element"></div>
-    <script src="/index.js"></script>
+    <script src="/public/scripts/script.js"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -182,13 +180,6 @@ cb=googleTranslateElementInit">
     </div>
   </a>
 </body>
-  
-   <script>
-      var myDomain = window.location.host;
-     if (myDomain === 'randomwebproxy.glitch.me') {
-      window.location.replace("https://randomwebproxy.glitch.me/warning.html");
-     }
-   </script>
   
   <style>
 footer {
