--- a/public/legacy/index.html
+++ b/public/legacy/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/proxyfavicon.png?v=1667402474343">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RandomWeb Proxy</title>
+    <title>RandomWe Proxy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <div id="google_translate_element"></div>
     <script src="/public/scripts/script.js"></script>
