--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -16,7 +16,7 @@
     <title>RandomWe Proxy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <div id="google_translate_element"></div>
-    <script src="/public/scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
