--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -16,7 +16,6 @@
     <title>RandomWe Proxy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <div id="google_translate_element"></div>
-    <script src="/index.js"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -146,6 +145,21 @@ mark {
                 'google_translate_element'
             );
         }
+	  window.addEventListener('load', function() {
+  var input = document.getElementById("input");
+  input.addEventListener('keyup', function onEvent(e) {
+      if (e.keyCode === 13) {
+          go();
+      }
+  });
+});
+
+function go() {
+  var url = document.getElementById("input").value;
+  if (url.trim() !== "") {
+    window.location.href = "/service/gateway?url=" + url;
+  }
+}
     </script>
   
   <script type="text/javascript"
