--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -177,6 +177,7 @@ cb=googleTranslateElementInit">
 <div class="searchbar">
 <input id="input" placeholder="Search or Enter URL" autofocus>
 <button id="go" onclick="go()"><i class="fas fa-search"></i></button>
+<button class="legacy-button" onclick="redirectToLegacy()">Legacy Mode</button>
 </div>
 </center>
 </body>
