--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -136,6 +136,29 @@ mark {
   border-radius: 50px;
   margin-right: 10px;
 }
+
+.new-button {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      width: 120px;
+      height: 40px;
+      background-color: #1a2935;
+      color: #f5f5f5;
+      font-size: 18px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+    }
+
+    .new-button:hover {
+      background-color: #1a3c54;
+      transform: scale(1.1);
+    }
     </style>
 
   <script type="text/javascript">
@@ -177,7 +200,7 @@ cb=googleTranslateElementInit">
 <div class="searchbar">
 <input id="input" placeholder="Search or Enter URL" autofocus>
 <button id="go" onclick="go()"><i class="fas fa-search"></i></button>
-<button class="legacy-button" onclick="redirectToLegacy()">Legacy Mode</button>
+<button class="new-button" onclick="redirectToNew()">New UI</button>
 </div>
 </center>
 </body>
