--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -183,6 +183,11 @@ function go() {
     window.location.href = "/service/gateway?url=" + url;
   }
 }
+
+// Function to redirect to the "legacy" folder
+    function redirectToLegacy() {
+      window.location.href = "/public/index.html";
+    }
     </script>
   
   <script type="text/javascript"
