--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -185,7 +185,7 @@ function go() {
 }
 
 // Function to redirect to the "legacy" folder
-    function redirectToLegacy() {
+    function redirectToNew() {
       window.location.href = "/public/index.html";
     }
     </script>
