--- a/public/legacy/sus.html
+++ b/public/legacy/sus.html
@@ -186,7 +186,7 @@ function go() {
 
 // Function to redirect to the "legacy" folder
     function redirectToNew() {
-      window.location.href = "/public/index.html";
+      window.location.href = "/index.html";
     }
     </script>
   
