--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="/style/side_nav.css">
 </head>
 <body>
+  <div class="loading-overlay" id="loadingOverlay">
+    <div class="loading-message">Loading...</div>
+  </div>
   <div class="side-nav-container">
     <button class="open-btn" onclick="openSideNav()">&#9776;</button>
     <div class="container">
