--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="loading-overlay" id="loadingOverlay">
-    <div class="loading-message">Launching Proxy...</div>
+    <div class="loading-message">Loading...</div>
   </div>
   <div class="side-nav-container">
     <button class="open-btn" onclick="openSideNav()">&#9776;</button>
