--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="side-box" id="sideNav">
       <button class="close-btn" onclick="closeSideNav()">&times;</button>
       <ul class="page-list">
-        <li><a href="https://rwebproxy.xyz"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="https://rwp.up.railway.app"><i class="fas fa-home"></i> Home</a></li>
         <li><a href="#"><i class="fas fa-user"></i> Profile</a></li>
         <li>
           <a href="/pages/plans.html" class="side-nav-button">
