--- a/public/pages/about_us.html
+++ b/public/pages/about_us.html
@@ -59,7 +59,7 @@
   <script>
     // Add the JavaScript function to go back to the home page
     function goHome() {
-      window.location.href = "https://rwebproxy.xyz";
+      window.location.href = "https://rwp.up.railway.app";
     }
   </script>
 </body>
