--- a/public/pages/apps.html
+++ b/public/pages/apps.html
@@ -95,35 +95,35 @@
     <h1 class="title">Apps (Quick Access)</h1>
     <p class="small-text">BETA</p>
     <div class="apps-grid">
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/red-youtube-logo-social-media-logo_197792-1803.png?v=1689718524424" alt="YouTube">
         <span>YouTube</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtr%3A-%2Ffiqcmrf.aoo/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtr%3A-%2Ffiqcmrf.aoo/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/unnamed%20(3).png?v=1689718485614" alt="Discord">
         <span>Discord</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Ctkkvoi.aoo%2F/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Ctkkvoi.aoo%2F/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/unnamed%20(2).png?v=1689718484374" alt="TikTok">
         <span>TikTok</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Ctuivcj.vv-/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Ctuivcj.vv-/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/unnamed.webp?v=1689718487086" alt="Twitch">
         <span>Twitch</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Cngtdlkx%2Ccmm-/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Cngtdlkx%2Ccmm-/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/Netflix-Symbol.png?v=1689718493243" alt="Netflix">
         <span>Netflix</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Chwlw.aoo%2Fuencmmg/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Chwlw.aoo%2Fuencmmg/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/unnamed%20(3).jpg?v=1689720844995" alt="Hulu">
         <span>Hulu</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Cilsvaercm%2Ccmm-/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Cilsvaercm%2Ccmm-/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/Instagram_logo_2022.svg.png?v=1689725488855" alt="Instagram">
         <span>Instagram</span>
       </a>
-      <a href="https://rwebproxy.xyz/service/hvtrs8%2F-wuw%2Crgdfiv.aoo%2F%3Drft%3F34345/" class="app-link" target="_blank">
+      <a href="https://rwp.up.railway.app/service/hvtrs8%2F-wuw%2Crgdfiv.aoo%2F%3Drft%3F34345/" class="app-link" target="_blank">
         <img src="https://cdn.glitch.global/3bfec3ea-fac1-4bb5-93da-234ca8f46650/reddit-logo.png?v=1689725491288" alt="Reddit">
         <span>Reddit</span>
       </a>
@@ -138,7 +138,7 @@
   <script>
     // Add the JavaScript function to go back to the home page
     function goHome() {
-      window.location.href = "https://rwebproxy.xyz";
+      window.location.href = "https://rwp.up.railway.app";
     }
   </script>
 </body>
