--- a/public/pages/plans.html
+++ b/public/pages/plans.html
@@ -178,7 +178,7 @@
 </head>
 <body>
     <header>
-      <button class="home-btn" onclick="window.location.href='https://rwebproxy.xyz'">&#8962;</button>
+      <button class="home-btn" onclick="window.location.href='https://rwp.up.railway.app'">&#8962;</button>
       <h1>All Plans (In Development)</h1>
     </header>
 
