--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <button class="close-btn" onclick="closeSideNav()">&times;</button>
       <ul class="page-list">
         <li><a href="https://rwp.up.railway.app"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="#"><i class="fas fa-user"></i> Profile</a></li>
+        <li><a href="/pages/coming_soon.html"><i class="fas fa-user"></i> Profile</a></li>
         <li>
           <a href="/pages/plans.html" class="side-nav-button">
             <i class="fas fa-clipboard-list"></i> Plans
