--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
   <script>
     // Function to redirect to the "legacy" folder
     function redirectToLegacy() {
-      window.location.href = "/legacy/sus.html";
+      window.location.href = "/legacy/index.html";
     }
   </script>
 </body>
