--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a href="https://discord.com" class="side-nav-button"><i class="fab fa-discord"></i></a>
         <a href="https://github.com" class="side-nav-button"><i class="fab fa-github"></i></a>
       </div>
-      <button class="legacy-button" onclick="redirectToLegacy()">Legacy Mode</button>
+      <button class="legacy-button" onclick="redirectToLegacy()">Legacy UI</button>
     </div>
     <div class="side-box" id="sideNav">
       <button class="close-btn" onclick="closeSideNav()">&times;</button>
