--- a/public/pages/docstext.html
+++ b/public/pages/docstext.html
@@ -109,29 +109,32 @@
   <div class="container">
     <img class="logo" src="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/Anonymous_emblem.svg.png?v=1677942826310" alt="Anonymous">
     <h1 class="title">RandomWeb Proxy</h1>
-
-    <!-- Docs Container -->
+    
     <div class="docs-container">
       <div class="docs-content">
-        <h2>Terms of Service</h2>
-      <p>By using RandomWeb Proxy, you agree to be bound by these Terms of Service, all applicable laws, and regulations, and you agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
+        <h2>Common Issues</h2>
 
-      <h3>Rules for Using RandomWeb Proxy:</h3>
+      <h3>Issue #1: Proxy is blocked:</h3>
       <ol>
-        <li>Do not use RandomWeb Proxy for any illegal activities. You must comply with all local, state, and federal laws while using our services.</li>
-        <li>Do not engage in any activities that may harm, disrupt, or interfere with the proper functioning of RandomWeb Proxy or other users' access to the service.</li>
-        <li>Do not attempt to gain unauthorized access to other systems or networks through RandomWeb Proxy.</li>
-        <li>Do not misuse the proxy to send spam, phishing emails, or any other unsolicited communications.</li>
-        <li>Do not use RandomWeb Proxy to access or distribute explicit or harmful content, including but not limited to, illegal or adult content.</li>
-        <li>Do not attempt to bypass any security measures or access content that is blocked or restricted by the website owners.</li>
-        <li>Do not use RandomWeb Proxy for any malicious, abusive, or harmful purposes.</li>
-        <li>RandomWeb Proxy may collect certain user information as outlined in our Privacy Policy. By using the service, you consent to the collection and use of your information as described.</li>
-        <li>We reserve the right to suspend or terminate your access to RandomWeb Proxy at any time if you violate any of these terms.</li>
+        <li>The proxy being blocked is a common thing and is quite easy to fix. If you saw that our proxy website is blocked, then please report the proxy block here! We frequently update the servers and create new ones. Check for other web proxies on our website!</li>
+      </ol>
+      <h3>Issue #2: Slow proxy traffic:</h3>
+      <ol>
+        <li>If you see that the website loading speed is slow while using our proxy, it might be that a lot of people are using the proxy. To fix this, go to other web proxies on our website and select the one that has a better loading speed!</li>
+      </ol>
+      <h3>Issue #3: Cloudflare error:</h3>
+      <ol>
+        <li>When surfing the web with the proxy, you might notice that some websites get a cloudflare error “This web property is not accessible via this address”. This is because the website you got this error on is using the DDoS cloudflare protection. Cloudflare detects our proxy and stops you from accessing the website. There is sadly no way to fix this.</li>
+      </ol>
+      <h3>Issue #4: Deceptive page error:</h3>
+      <ol>
+        <li>Google might warn you that our proxy page is deceptive (malware/viruses) at some point. This is because every page a user visits is saved locally on the server. Google might detect a certain page someone has visited using the proxy and warn you. Just don’t visit that page and you’ll be fine.</li>
       </ol>
 
-      <p>These Terms of Service may be updated or modified from time to time without prior notice. It is your responsibility to review this page periodically for any changes. Continued use of RandomWeb Proxy after any modifications shall constitute your consent to such changes.</p>
+      <p>If you have any issues that are not listed on here, please contant support on our discord server!</p>
       </div>
     </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
   <script>
