--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li>
-          <a href="/pages/tos.html" class="side-nav-button">
+          <a href="/pages/terms_of_service.html" class="side-nav-button">
             <i class="fas fa-file-contract"></i> Terms of Service
           </a>
         </li>
