--- a/public/pages/terms_of_service.html
+++ b/public/pages/terms_of_service.html
@@ -115,6 +115,7 @@
       <div class="docs-content">
         <h2>Terms of Service</h2>
       <p>By using RandomWeb Proxy, you agree to be bound by these Terms of Service, all applicable laws, and regulations, and you agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
+      <p>Please be aware that by using this web proxy, you acknowledge that any violation of the Terms of Service is entirely your choice, and you will be solely responsible for any consequences that may result from such actions.</p>
 
       <h3>Rules for Using RandomWeb Proxy:</h3>
       <ol>
@@ -122,11 +123,11 @@
         <li>Do not engage in any activities that may harm, disrupt, or interfere with the proper functioning of RandomWeb Proxy or other users' access to the service.</li>
         <li>Do not attempt to gain unauthorized access to other systems or networks through RandomWeb Proxy.</li>
         <li>Do not misuse the proxy to send spam, phishing emails, or any other unsolicited communications.</li>
-        <li>Do not use RandomWeb Proxy to access or distribute explicit or harmful content, including but not limited to, illegal or adult content.</li>
+        <li>Do not use RandomWeb Proxy to access or distribute explicit or harmful content, including but not limited to, illegal or copyrighted material.</li>
         <li>Do not attempt to bypass any security measures or access content that is blocked or restricted by the website owners.</li>
         <li>Do not use RandomWeb Proxy for any malicious, abusive, or harmful purposes.</li>
         <li>RandomWeb Proxy may collect certain user information as outlined in our Privacy Policy. By using the service, you consent to the collection and use of your information as described.</li>
-        <li>We reserve the right to suspend or terminate your access to RandomWeb Proxy at any time if you violate any of these terms.</li>
+        <li>We reserve the right to suspend or terminate your access to RandomWeb Proxy.</li>
       </ol>
 
       <p>These Terms of Service may be updated or modified from time to time without prior notice. It is your responsibility to review this page periodically for any changes. Continued use of RandomWeb Proxy after any modifications shall constitute your consent to such changes.</p>
