--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AMongUS ImporTat</title>
+  <title>RandomWeb Proxy</title>
   <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/proxyfavicon.png?v=1667402474343">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="/style/style.css">
@@ -18,7 +18,7 @@
     <button class="open-btn" onclick="openSideNav()">&#9776;</button>
     <div class="container">
       <img class="logo" src="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/Anonymous_emblem.svg.png?v=1677942826310" alt="Anonymous">
-      <h1 class="title">Ralph is GAY!</h1>
+      <h1 class="title">RandomWeb Proxy BETA v1.4</h1>
       <div class="searchbar">
         <input id="input" placeholder="Enter URL" autofocus onkeydown="if (event.keyCode === 13) go()">
       </div>
