--- a/public/index.html
+++ b/public/index.html
@@ -69,13 +69,42 @@
   <script>
     // Array of random loading messages
     var loadingMessages = [
-      "Loading...",
+      "Loading Proxy...",
       "Please wait...",
-      "Fetching content...",
+      "Still fucking waiting...",
       "Getting things ready...",
-      "Almost there...",
-      "Hold on a moment...",
-      "Loading awesomeness...",
+      "What year is it again?",
+      "Loading jamals...",
+      "Coming to your mother house...",
+      "Robbing your earnings...",
+      "Finding your virginity...",
+      "Oba loves hentai...",
+      "Why am I still here?",
+      "Jirehl, I see you...",
+      "Stop searching for unblocked games...",
+      "I'm tired...",
+      "This is gay...",
+      "I get more bitches than you...",
+      "Go touch some grass...",
+      "Hi! Oh it's you again...",
+      "Do some exercises fatass...",
+      "...",
+      "SHUT THE FUCK UP...",
+      "I listen to McVirgins...",
+      "2016 is the best year, change my mind...",
+      "I don't understand British...",
+      "Retards are retarted...",
+      "Hee Hee Hee Ha...",
+      "Ukraine sucks...",
+      "I'm just trying to earn for living...",
+      "When was the last time I asked?",
+      "HELP ME...",
+      "NI-, Nah I'm not gonna say it...",
+      "My last message...",
+      "Who the fuck cared...",
+      "Doing your mother...",
+      "Lebron James is fire...",
+      "Fuck this, I'm out...",
     ];
     // Function to redirect to the "legacy" folder
     function redirectToLegacy() {
