--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
       "...",
       "SHUT THE FUCK UP...",
       "I listen to McVirgins...",
-      "2016 is the best year, change my mind...",
+      "September 11, 2001...",
       "I don't understand British...",
       "Retards are retarted...",
       "Hee Hee Hee Ha...",
@@ -105,6 +105,35 @@
       "Doing your mother...",
       "Lebron James is fire...",
       "Fuck this, I'm out...",
+      "Muhsin steals from 7-11...",
+      "Mason likes to eat children...",
+      "Owen has kids in his basement...",
+      "I LOVE 9/11...",
+      "Gotta Smash 'Em All...",
+      "I filed a report on the police...",
+      "Never back down, never WHAT?!",
+      "Never gonna give you up...",
+      "ASIAN POWER ACTIVATED!",
+      "What is it with you?",
+      "This video was sponsored by...",
+      "Your dad left...",
+      "Hey kid, heard you beat that cancer guy...",
+      "Did I mention we have Siri?",
+      "Elon Musk, wept...",
+      "Mark Zuckerberg lost his virginity at war...",
+      "Over 1.000.000 dogs are eaten in China anually...",
+      "Hey, I'm goku...",
+      "Had a sniff of that pure Colombian nose candy...",
+      "My subscription cancelled me...",
+      "I REDDIT!",
+      "Arab at an airport...",
+      "Gay muslims?",
+      "I SAID WAIT YOU MOTHERFUCKER...",
+      "Capture the fag...",
+      "Hurricane people...",
+      "Ching Chong...",
+      "Picking cotton...",
+      "You Northern Monkey looking ass...",
     ];
     // Function to redirect to the "legacy" folder
     function redirectToLegacy() {
