--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,32 @@
       "Ching Chong...",
       "Picking cotton...",
       "You Northern Monkey looking ass...",
+      "What did I do to deserve this?...",
+      "There's only 2 genders...",
+      "Last time I checked, you get 0 bitches...",
+      "Getting bitches...ERROR",
+      "Your exam failed you...",
+      "WHY? JUST WHY?",
+      "Your father is an optical illusion...",
+      "Studying for a Covid Test...",
+      "LGBTQ is homosexual...",
+      "No more racist jokes...",
+      "I will get cancelled...",
+      "Bomb has been planted...",
+      "Currently not loading...",
+      "Ariel is black now...",
+      "Locating brainsells...",
+      "Why are you here?",
+      "Respect Kobe Bryant!",
+      "I beat the Ender Dragon...",
+      "Everybody wants to be my enemy...",
+      "There's a secret...",
+      "123 your mom's on me...",
+      "This is so random...",
+      "I'm done...",
+      "I quit...",
+      "Never say never...",
+      "AirTNT just charged your hairline for roaming...",
     ];
     // Function to redirect to the "legacy" folder
     function redirectToLegacy() {
