--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="loading-overlay" id="loadingOverlay">
     <i class="fas fa-spinner fa-spin"></i>
-    <div class="loading-message" id="loadingMessage">RANDOM LOADING MESSAGE...</div>
+    <div class="loading-message">RANDOM LOADING MESSAGE...</div>
   </div>
   <div class="side-nav-container">
     <button class="open-btn" onclick="openSideNav()">&#9776;</button>
@@ -67,110 +67,10 @@
   <script src="/scripts/script.js"></script>
   <script src="/scripts/side_nav.js"></script>
   <script>
-    // Array of random loading messages
-    var loadingMessages = [
-      "Loading Proxy...",
-      "Please wait...",
-      "Still fucking waiting...",
-      "Getting things ready...",
-      "What year is it again?",
-      "Loading jamals...",
-      "Coming to your mother house...",
-      "Robbing your earnings...",
-      "Finding your virginity...",
-      "Oba loves hentai...",
-      "Why am I still here?",
-      "Jirehl, I see you...",
-      "Stop searching for unblocked games...",
-      "I'm tired...",
-      "This is gay...",
-      "I get more bitches than you...",
-      "Go touch some grass...",
-      "Hi! Oh it's you again...",
-      "Do some exercises fatass...",
-      "...",
-      "SHUT THE FUCK UP...",
-      "I listen to McVirgins...",
-      "September 11, 2001...",
-      "I don't understand British...",
-      "Retards are retarted...",
-      "Hee Hee Hee Ha...",
-      "Ukraine sucks...",
-      "I'm just trying to earn for living...",
-      "When was the last time I asked?",
-      "HELP ME...",
-      "NI-, Nah I'm not gonna say it...",
-      "My last message...",
-      "Who the fuck cared...",
-      "Doing your mother...",
-      "Lebron James is fire...",
-      "Fuck this, I'm out...",
-      "Muhsin steals from 7-11...",
-      "Mason likes to eat children...",
-      "Owen has kids in his basement...",
-      "I LOVE 9/11...",
-      "Gotta Smash 'Em All...",
-      "I filed a report on the police...",
-      "Never back down, never WHAT?!",
-      "Never gonna give you up...",
-      "ASIAN POWER ACTIVATED!",
-      "What is it with you?",
-      "This video was sponsored by...",
-      "Your dad left...",
-      "Hey kid, heard you beat that cancer guy...",
-      "Did I mention we have Siri?",
-      "Elon Musk, wept...",
-      "Mark Zuckerberg lost his virginity at war...",
-      "Over 1.000.000 dogs are eaten in China anually...",
-      "Hey, I'm goku...",
-      "Had a sniff of that pure Colombian nose candy...",
-      "My subscription cancelled me...",
-      "I REDDIT!",
-      "Arab at an airport...",
-      "Gay muslims?",
-      "I SAID WAIT YOU MOTHERFUCKER...",
-      "Capture the fag...",
-      "Hurricane people...",
-      "Ching Chong...",
-      "Picking cotton...",
-      "You Northern Monkey looking ass...",
-      "What did I do to deserve this?...",
-      "There's only 2 genders...",
-      "Last time I checked, you get 0 bitches...",
-      "Getting bitches...ERROR",
-      "Your exam failed you...",
-      "WHY? JUST WHY?",
-      "Your father is an optical illusion...",
-      "Studying for a Covid Test...",
-      "LGBTQ is homosexual...",
-      "No more racist jokes...",
-      "I will get cancelled...",
-      "Bomb has been planted...",
-      "Currently not loading...",
-      "Ariel is black now...",
-      "Locating brainsells...",
-      "Why are you here?",
-      "Respect Kobe Bryant!",
-      "I beat the Ender Dragon...",
-      "Everybody wants to be my enemy...",
-      "There's a secret...",
-      "123 your mom's on me...",
-      "This is so random...",
-      "I'm done...",
-      "I quit...",
-      "Never say never...",
-      "AirTNT just charged your hairline for roaming...",
-    ];
     // Function to redirect to the "legacy" folder
     function redirectToLegacy() {
       window.location.href = "/legacy/index.html";
     }
-    // Function to select and update a random loading message
-    function updateLoadingMessage() {
-  var loadingMessageElement = document.getElementById("loadingMessage");
-  var randomIndex = Math.floor(Math.random() * loadingMessages.length);
-  loadingMessageElement.textContent = loadingMessages[randomIndex];
-}
   </script>
 </body>
 </html>
