--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="loading-overlay" id="loadingOverlay">
     <i class="fas fa-spinner fa-spin"></i>
-    <div class="loading-message">RANDOM LOADING MESSAGE...</div>
+    <div class="loading-message">Launching Proxy...</div>
   </div>
   <div class="side-nav-container">
     <button class="open-btn" onclick="openSideNav()">&#9776;</button>
