--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <button class="open-btn" onclick="openSideNav()">&#9776;</button>
     <div class="container">
       <img class="logo" src="https://cdn.glitch.global/10aa286e-2691-4343-b823-55e445bcfd24/Anonymous_emblem.svg.png?v=1677942826310" alt="Anonymous">
-      <h1 class="title">RandomWeb Proxy BETA v1.4</h1>
+      <h1 class="title">Muhsin is gay</h1>
       <div class="searchbar">
         <input id="input" placeholder="Enter URL" autofocus onkeydown="if (event.keyCode === 13) go()">
       </div>
